--- a/public/main.css
+++ b/public/main.css
@@ -27,37 +27,56 @@ body{
     background-color: var(--header-bg-color);
     box-shadow: -3px -3px 9px -1px black;
 }
-#username{
+#username-wrapper{
     height:60px;
     width:100%;
     padding:0rem 2rem;
-    line-height: 60px;
-    font-size: 2.5rem;
+    display: flex;
+    justify-content: space-evenly;
     background-color: var(--header-bg-color);
 }
+#username{
+    line-height: 60px;
+    font-size: 2.5rem;
+
+}
+
 #chat-box-wrapper{
     grid-column: 3/4;
     background-color: #e5ddd5;
     box-shadow: 0px -3px 5px -1px black;
     position:relative;
 }
-.room-info{
+.contact-info{
     height:75px;
     background-color: white;
     border-top:solid 1px #d0d0d0;
 }
-.room{
+.contact{
     font-size:2rem;
     line-height: 75px;
     padding-left:2rem;
 }
-#roomname{
+#contactname{
     height:60px;
     width:100%;
     padding:0rem 2rem;
     line-height: 60px;
     font-size: 2.5rem;
     background-color: var(--header-bg-color);
+}
+#addContactWrapper{
+    height:30px;
+    width:100%;
+}
+#addContactWrapper input{
+    font-size: 1.5rem;
+    height:100%;
+    width:70%;
+}
+#addContactWrapper button{
+    height:100%;
+    width:20%;
 }
 #message-list{
     position: absolute;
@@ -124,6 +143,10 @@ body{
 
 li{ 
     list-style-type: none;
+}
+
+.selected{
+    background-color: burlywood;
 }
 
 @media(min-width: 1300px){
